[package]
name = "advent-of-code-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
crossterm = "0.27.0"
indicatif = "0.17.7"
itertools = "0.12.0"
nalgebra = "0.32.3"
num = "0.4.1"
queues = "1.1.0"
rangemap = "1.4.0"
regex = "1.10.2"
tui = "0.19.0"
