[package]
name = "advent-of-code-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bmp = "0.5.0"
colored = "2.1.0"
crossterm = "0.27.0"
hex = "0.4.3"
indicatif = "0.17.7"
itertools = "0.12.0"
num = "0.4.1"
once_cell = "1.19.0"
priority-queue = "1.3.2"
queues = "1.1.0"
rangemap = "1.4.0"
rayon = "1.8.0"
regex = "1.10.2"
tui = "0.19.0"
